# AI_Agents

.devcontainer/: devcontainer.json
Assignment_1_AI_Related/: Anthropic_Patterns.py  Swarm.py
Assignment_1_AI_Related/litellm_Project/: main.py  mood_journal.txt  pyproject.toml
Assignment_1_AI_Related/openrouter_flask_app/: app.py
Assignment_1_AI_Related/openrouter_flask_app/templates/: index.html
Assignment_1_AI_Related/weather_cli/: pyproject.toml
Assignment_1_AI_Related/weather_cli/src/weather_cli/: __init__.py  main.py  test_weather.py
Assignment_2_AI_Agent_using_SDK/hello_agent/: chainlit_app.py  main.py  pyproject.toml
Assignmnet_3_4_5_projects/: README.md  country_info_toolkit.py  mood_handoff.py  pyproject.toml  suggester.py
